--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,7 @@
     <section class="big-news">
       <div class="bn-card">
         <div class="img-container">
-          <a href="#"><img src="/code/assets/SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk">
+          <a href="#"><img src="../code/assets/SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk">
           </a>
         </div>
         <div class="bn-text">
@@ -43,7 +43,7 @@
     <section class="small-news">
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="#"><img src="/code/assets/PLATINUM___MEDIAL_native_1600.jpg" alt="Dunk Crystal"></a>
+          <a href="#"><img src="../code/assets/PLATINUM___MEDIAL_native_1600.jpg" alt="Dunk Crystal"></a>
         </div>
         <h3>Crystals Forever</h3>
         <p><i>2020, November 11</i> - With a theme of air and sunshine Cactus Plant Flea Market has done a brilliant collaboration again. The Nike Dunk is shining bright with actual Swarovski® crystals.</p>
@@ -51,7 +51,7 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="#"><img src="/code/assets/Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="AF1 Flyleather"></a>
+          <a href="#"><img src="../code/assets/Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="AF1 Flyleather"></a>
         </div>
         <h3>Motha' Earth</h3>
         <p><i>2020, September 18</i> - Ruohan Wang (Berlin-Based illustrator) gives the Flyleather pack some optimistic colour and motion. Made with 50% recycled leather fibre. </p>
@@ -59,7 +59,7 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="#"><img src="/code/assets/Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="AF1 Ript it"></a>
+          <a href="#"><img src="../code/assets/Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="AF1 Ript it"></a>
         </div>
         <h3>Rip & Tear it to You</h3>
         <p><i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. It is what is underneath that is the intriguing part. You can peel back the upper layer to make your own colourway.</p>
@@ -67,7 +67,7 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="#"><img src="/code/assets/006_native_1600.jpg" alt="Naomi Osaka"></a>
+          <a href="#"><img src="../code/assets/006_native_1600.jpg" alt="Naomi Osaka"></a>
         </div>
         <h3>Naomi Osaka</h3>
         <p><i>2020, December 4 -</i>The Nike x Naomi Osaka x CDG Blazer celebrates the irrefutable power of the tennis star’s cultural footprint. Additional details include Osaka's signature along with the handwritten phrase "Home is Where the Heart is.”</p>
@@ -75,7 +75,7 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="#"><img src="/code/assets/DD3223-100_210736523_D_E_1X1_native_1600.png" alt="AF1 Para"></a>
+          <a href="#"><img src="../code/assets/DD3223-100_210736523_D_E_1X1_native_1600.png" alt="AF1 Para"></a>
         </div>
         <h3>‘Para-noise’</h3>
         <p><i>2020, November 5 -</i> One year ago, Seoul-born hip-hop star G-DRAGON released his first collaborative Nike Air Force 1 “Para-noise". In 2020, the Nike Air Force 1 “Para-noise” reverses its color scheme to white, but retains its self-expressive character.</p>
