--- a/code/previous_artists/celeste.html
+++ b/code/previous_artists/celeste.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: Noemi's Music Magazine</title>
-    <link rel="stylesheet" href="../code/style.css"/>
+    <link rel="stylesheet" href="../style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../code/index.html">Home</a></div>
+        <div><a href="../index.html">Home</a></div>
         <div>Concerts</div>
         <div>Events</div>
         <div>About</div>
