--- a/code/previous_artists/foxwarren.html
+++ b/code/previous_artists/foxwarren.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: Noemi's Music Magazine</title>
+    <title>Noemi's Music Magazine</title>
     <link rel="stylesheet" href="../style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
