--- a/code/index.html
+++ b/code/index.html
@@ -43,7 +43,7 @@
     <!--MORE NEWS-->
     <section class="more-news container">
       <div class="news-card">
-        <img class="photo-bar" src="../img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
+        <img class="photo-bar" src="./img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
         <p class="text">  
         <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
