try change filepath again

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
 
     <!--BIG NEWS-->
     <section class="big-news container">
-      <img class="photo-bar" src="../img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
+      <img class="photo-bar" src="./img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
       <div class="news-card">       
         <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
