try change file path way to img again

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
 
     <!--BIG NEWS-->
     <section class="big-news container">
-      <img class="photo-bar" src="./img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
+      <img class="photo-bar" src="/img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
       <div class="news-card">       
         <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
@@ -43,7 +43,7 @@
     <!--MORE NEWS-->
     <section class="more-news container">
       <div class="news-card">
-        <img class="photo-bar" src="./img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
+        <img class="photo-bar" src="/img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
         <p class="text">  
         <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
