change all file paths to img

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Neo News site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   
   <body>
@@ -61,7 +61,7 @@
       </div>
 
     <div class="news-card">
-      <img class="photo-bar" src="../img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building">
+      <img class="photo-bar" src="img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building">
       <p class="text">
       <h2>The escape from Stockholm is increasing</h2>
       More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from <a href="https://scb.se/en/">Statistics Sweden</a>.
@@ -69,7 +69,7 @@
     </div>
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid">
+        <img class="photo-bar" src="img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid">
         <p class="text">
         <h2>"Evidence speaks against anxious middle-class parent"</h2>
         Children are irrational, researchers have long believed. Recent studies show that they use both statistics and probability to draw conclusions - and they are more creative problem solvers than adults, according to Stanford professor Alison Gopnik.
@@ -80,7 +80,7 @@
     <!--OTHER NEWS-->
     <section class="other-news container">
       <div class="news-card">
-        <img class="photo-bar" src="../img/antidepressiv.png" alt="Image of antidepressiv">
+        <img class="photo-bar" src="img/antidepressiv.png" alt="Image of antidepressiv">
         <p class="text">
         <h3>Antidepressants - the temporary cure that became permanent</h3>
         Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
@@ -88,7 +88,7 @@
       </div>
   
       <div class="news-card">
-        <img class="photo-bar" src="../img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
+        <img class="photo-bar" src="img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
         <p class="text">
         <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
         Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
@@ -97,7 +97,7 @@
 
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/new2_ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book">
+        <img class="photo-bar" src="img/new2_ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book">
         <p class="text">
         <h2>Rugged, Physical Work and reflection</h2>
         In Amos Velsinger's work the participating artists share a common desire for reading as dancing. The new piece premiered at the underground theatre The Place to be last friday.  
@@ -105,7 +105,7 @@
       </div>
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image in black and white of a city">
+        <img class="photo-bar" src="img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image in black and white of a city">
         <p class="text">
         <h2><i>Dear comrades</i> - New documentary by Andrei Kontjalovskij </h2>
         Russian drama about the workers in Novocherkassk who in 1962 openly protested against wage cuts and price increases on basic foodstuffs.
