added flex-direction and hover effects

--- a/code/index.html
+++ b/code/index.html
@@ -28,13 +28,16 @@
 
     <section class="big-news">
       <img class="big-picture" src="./green aurora boralis.jpg" alt="picture of green aurora borealis">
-      <div class="news-card1">An aurora (plural: auroras or aurorae),[a] sometimes referred to as polar lights (aurora polaris), northern lights (aurora borealis), or southern lights (aurora australis), is a natural light display in the Earth's sky, predominantly seen in high-latitude regions (around the Arctic and Antarctic). Auroras are the result of disturbances in the magnetosphere caused by solar wind. These disturbances are sometimes strong enough to alter the trajectories of charged particles in both solar wind and magnetospheric plasma. These particles, mainly electrons and protons, precipitate into the upper atmosphere (thermosphere/exosphere).</div>
+      <div class="big-newstext">
+        <p>Tonight! The chance to see the Northern Lights!</p>
+      </div>
     </section>
 
     <section class="small-cards">
       <div class="news-card2">
         <img class="small-image" src="./meteor_in_the_sky.jpg" alt="meteor int the sky">
-        <p class="small-text">Meteor showers every year</p>
+        <p class="small-text">The Perseid meteor shower will be active from 17 July to 24 August, 
+          producing its peak rate of meteors around 12 August.</p>
       </div>
       <div class="news-card2">
         <img class="small-image" src="./Sun and frost creating a halo.jpg" alt="sun creating halo">
@@ -48,7 +51,6 @@
         <img class="small-image" src="./rocket.jpg" alt="rocket">
         <p class="small-text">Telescope has helped science</p>
       </div>
-      
     </section>
   </body>
 </html>
