added border-radius to make circular images in tablet view

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
     <section class="big-news">
       <img class="big-picture" src="./green aurora boralis.jpg" alt="picture of green aurora borealis">
       <div class="big-newstext">
-        <p>Tonight! The chance to see the Northern Lights!</p>
+        <p>Tonight, the chance is high to see the Northern Lights!</p>
       </div>
     </section>
 
@@ -41,15 +41,18 @@
       </div>
       <div class="news-card2">
         <img class="small-image" src="./Sun and frost creating a halo.jpg" alt="sun creating halo">
-        <p class="small-text">Suns i creating a halo</p>
+        <p class="small-text">A halo effect is a light phenomenon appearing as a ring around the sun 
+          when the light is shining through ice crystals in the air.</p>
       </div>
       <div class="news-card2">
         <img class="small-image" src="./galaxy.jpg" alt="galaxy">
-        <p class="small-text">There are many galaxies</p>
+        <p class="small-text">Galaxies are vast cosmic islands of stars, gas, dust, 
+          and dark matter held together by gravity. </p>
       </div>
       <div class="news-card2">
         <img class="small-image" src="./rocket.jpg" alt="rocket">
-        <p class="small-text">Telescope has helped science</p>
+        <p class="small-text">A rocket is a vehicle that launches into space. 
+          A rocket also can be a type of engine.</p>
       </div>
     </section>
   </body>
