Final styling of page and first attempt at making it respionsive to different devices

--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,9 @@
     <header class="header">
         <img class="logo" src="./Silhuette-Logotype-with-circle.svg" alt="Logotype">
         <h1 class="newspaper-name">The Fashionable Update</h1>
+        <!-- <input id="menu" type="checkbox">
+        <label for="menu"></label> -->
+
         <nav class="navigation-menu">
             <div class="navigation-item">HOME</div>
             <div class="navigation-item">ABOUT</div>
@@ -24,7 +27,7 @@
 
 
     <!-- The Big News -->
-    <section class="big-news">
+    <section class="container-big-news">
         <div class="main-news-card">
             <div class="couture">
                 <img src="./Couture.jpg" alt="Augusta Lundin Exhibition">
@@ -53,7 +56,7 @@
     </section>
 
     <!-- The Smaller News  -->
-    <section class="smaller-news">
+    <section class="container-smaller-news">
 
         <div class="news-card">
             <div class="greenwashing">
