Photo's updated, footer added

--- a/code/index.html
+++ b/code/index.html
@@ -117,6 +117,7 @@
             <img src="/assets/piggiefamily.jpeg" alt="Guinea pig mom and 2 babies eating vegetables">
             <p>How one adoption lead to a surprise family.</p>
           </article>
+        </a>
          <a href="#">
           <article>
             <h2>Does my Guinea Pig like me?</h2>
@@ -161,15 +162,13 @@
             <img src="/assets/indy.jpg" alt="Guinea pig eating a bellpepper">
             <p>Read Indy's story here!</p>
          </article>
-        </a>
-        </a>
-        
+        </a>        
       </section>      
     </section>
   
   </body>
 
   <footer>
-    <!--Footer Add here-->
+    <p>All images are ©Kathleen Rogers.</p>
   </footer>
 </html>
