Added buttons, hover to buttons and nav, site done

--- a/code/index.html
+++ b/code/index.html
@@ -40,9 +40,9 @@
       </div>
 
       <div class="right">
-        <div class="search">Search</div>
-        <div class="subscribe">Subscribe</div>
-        <div class="login">Login</div>
+        <button class="button">Search 🔎</button>
+        <button class="button">Subscribe</button>
+        <button class="button">Login</button>        
       </div>
       
       <nav class=lower-menu>
@@ -165,10 +165,11 @@
         </a>        
       </section>      
     </section>
-  
+  </section>
   </body>
 
   <footer>
     <p>All images are ©Kathleen Rogers.</p>
   </footer>
+  
 </html>
