fixing img links

--- a/code/index.html
+++ b/code/index.html
@@ -25,17 +25,17 @@
         </div>
         <div class="logo-group">
         <div class="logo">
-          <img src="/assets/logo.png" alt="logo image">
+          <img src="./assets/logo.png" alt="logo image">
         </div>
         <div class="nameplate">
-          <img src="/assets/title.png" alt="website name">
+          <img src="./assets/title.png" alt="website name">
         </div>
       </div>
       </div>
 
       <div class="middle">
         <div class="logo">
-          <img src="/assets/logo.png" alt="logo image">
+          <img src="./assets/logo.png" alt="logo image">
         </div>
       </div>
 
@@ -67,7 +67,7 @@
            wheek wheek! Squeak squeak wheek wheeeek wheeeeeek! wheeek
            wheek Wheeek!</p>
         </article>        
-        <img src="/assets/Spiderpig.jpg" alt="Giant spider and Guinea pig">
+        <img src="./assets/Spiderpig.jpg" alt="Giant spider and Guinea pig">
       </section>
     </section>
 
@@ -76,7 +76,7 @@
         <a href="#">
           <article>
             <h2>The best fleece toys for your Piggie!</h2>
-            <img src="/assets/hammockpiggie.jpeg" alt="Guinea pig in hammock">
+            <img src="./assets/hammockpiggie.jpeg" alt="Guinea pig in hammock">
             <p>I can't believe it's not cotton!</p>
             <p>Did you say machine wash friendly!?</p>
          </article>
@@ -84,21 +84,21 @@
         <a href="#">
           <article>
             <h2>The Diva of Piggies.</h2>
-            <img src="/assets/bunnypiggie.jpg" alt="Guinea pig wearing bunny ears">
+            <img src="./assets/bunnypiggie.jpg" alt="Guinea pig wearing bunny ears">
             <p>The story of how Coco became the fashion pig of the year!</p>
           </article>
         </a>
         <a href="#">
           <article>
             <h2>Adventures Outside!</h2>
-            <img src="/assets/dipperclover.jpeg" alt="Guinea pig hiding in clovers">
+            <img src="./assets/dipperclover.jpeg" alt="Guinea pig hiding in clovers">
             <p>The benefits of outdoor time with your pigs!</p>
          </article>
         </a>
         <a href="#">
           <article>
             <h2>Baby Piggies</h2>
-            <img src="/assets/holdingbaby.jpeg" alt="Baby guinea pig eating lettuce">
+            <img src="./assets/holdingbaby.jpeg" alt="Baby guinea pig eating lettuce">
             <p>Expecting a litter? Unsure of what to do?</p>
             <p>Read on for some basic tips for first timers.</p>
          </article>
@@ -106,7 +106,7 @@
         <a href="#">
           <article>
             <h2>1 hour old babies!</h2>
-            <img src="/assets/piggiebabies.jpg" alt="2 baby guinea pigs">
+            <img src="./assets/piggiebabies.jpg" alt="2 baby guinea pigs">
             <p>First glimpes of Latte's first litter.</p>
             <p>Fall in love with Coffee & Bean!</p>
          </article>
@@ -114,21 +114,21 @@
         <a href="#">
           <article>
             <h2>The Coffee Pig Family</h2>
-            <img src="/assets/piggiefamily.jpeg" alt="Guinea pig mom and 2 babies eating vegetables">
+            <img src="./assets/piggiefamily.jpeg" alt="Guinea pig mom and 2 babies eating vegetables">
             <p>How one adoption lead to a surprise family.</p>
           </article>
         </a>
          <a href="#">
           <article>
             <h2>Does my Guinea Pig like me?</h2>
-            <img src="/assets/SleepyPiggie.jpg" alt="A male guinea pig sleeping">
+            <img src="./assets/SleepyPiggie.jpg" alt="A male guinea pig sleeping">
             <p>Learn more about piggie behavior.</p>
           </article>
         </a>
         <a href="#">
           <article>
             <h2>The best fleece toys for your Piggie!</h2>
-            <img src="/assets/xmaspiggies2.jpeg" alt="Guinea pigs under a christmas tree">
+            <img src="./assets/xmaspiggies2.jpeg" alt="Guinea pigs under a christmas tree">
             <p>Spending the holidays with your piggie family.</p>
             <p>What pig-traditions do you have?</p>
          </article>
@@ -136,14 +136,14 @@
         <a href="#">
           <article>
             <h2>How to prepare for colder weather.</h2>
-            <img src="/assets/Snowpig.jpg" alt="guinea pig looking at snow out of window">
+            <img src="./assets/Snowpig.jpg" alt="guinea pig looking at snow out of window">
             <p>Sensitive to temperature changes it's important to take care of your Pig!</p>
           </article>
         </a>
         <a href="#">
           <article>
             <h2>Speaking Guinea Pig</h2>
-            <img src="/assets/dippereatsclover.jpg" alt="Guinea pig squeaking">
+            <img src="./assets/dippereatsclover.jpg" alt="Guinea pig squeaking">
             <p>High wheeks, low wheeks, chirping!?</p>
             <p>What does it all mean?! Read on to learn more!</p>
          </article>
@@ -151,7 +151,7 @@
         <a href="#">
           <article>
             <h2>The best fleece toys for your Piggie!</h2>
-            <img src="/assets/piggiecup.jpeg" alt="Guinea pig sitting in a coffee mug">
+            <img src="./assets/piggiecup.jpeg" alt="Guinea pig sitting in a coffee mug">
             <p>New guinea pig merchandise in our shop!</p>
             <p>Check it out before it sells out!</p>
          </article>
@@ -159,7 +159,7 @@
         <a href="#">
           <article>
             <h2>The Piggie that lived to be 10!</h2>
-            <img src="/assets/indy.jpg" alt="Guinea pig eating a bellpepper">
+            <img src="./assets/indy.jpg" alt="Guinea pig eating a bellpepper">
             <p>Read Indy's story here!</p>
          </article>
         </a>        
