--- a/code/index.html
+++ b/code/index.html
@@ -25,10 +25,10 @@
         </div>
         <div class="logo-group">
         <div class="logo">
-          <img src="assets/logo.png" alt="logo image">
+          <img src="./assets/logo.png" alt="logo image">
         </div>
         <div class="nameplate">
-          <img src="assets/title.png" alt="website name">
+          <img src="./assets/title.png" alt="website name">
         </div>
       </div>
       </div>
