--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
           <img src="/assets/logo.png" alt="logo image">
         </div>
         <div class="nameplate">
-          <img src="../assets/title.png" alt="website name">
+          <img src="/assets/title.png" alt="website name">
         </div>
       </div>
       </div>
