--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-        <title>Project 2: The News Site</title>
+        <title>Project 2: The Wheeeekly News</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yusei Magic">
     <style>
