Change main news image to get better proportions

--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
     </header>
     <section class="big-news">
       <div class="big-new-img">
-        <img class="shadow" src="icehockey-news-site.jpg" alt="Ice hockey goalie">
+        <img class="shadow-1" src="icehockey-news-site.jpg" alt="Ice hockey goalie">
       </div>
       <div class="big-news-text">
         <h2>Season finally starts!</h2>
