Changed indentation in index.html and replaced tag in hamburger.html to nav.

--- a/code/hamburger.html
+++ b/code/hamburger.html
@@ -11,13 +11,13 @@
         <a href="./index.html"><img class="logo-3" src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
-    <section class="nav-links">
+    <nav class="nav-links">
         <ul>
             <li><a href="./article1.html">BREAKING NEWS</a></li>
             <li><a href="./about.html">ABOUT US</a></li>
             <li><a href="./contact.html">CONTACT</a></li>
         </ul>
-    </section>
+    </nav>
 
     <footer>
         <p>Dentnews AB 2021 &copy</p>
