--- a/code/index.html
+++ b/code/index.html
@@ -1,138 +1,133 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dentnews</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="hamburger"> 
-        <a href="./hamburger.html">
-          <!--divs to create three lines for hamburger menu-->
-          <div></div>
-          <div></div>
-          <div></div>
-        </a>
-      </div>
-      <img class="logo-1" src="./photos/dentnews.png" alt="Dentnews logo">
-      <nav class="navigation-container">
-      <div class="navigation-element-left">
-        <a href="./article1.html">BREAKING NEWS</a>
-      </div>
-      <div class="navigation-element-left">
-        <a href="./about.html">ABOUT US</a>
-      </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dentnews</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="hamburger">
+      <a href="./hamburger.html">
+        <!--divs to create three lines for hamburger menu-->
+        <div></div>
+        <div></div>
+        <div></div>
+      </a>
+    </div>
+    <img class="logo-1" src="./photos/dentnews.png" alt="Dentnews logo">
+    <nav class="navigation-container">
+      <div class="navigation-element-left"><a href="./article1.html">BREAKING NEWS</a></div>
+      <div class="navigation-element-left"><a href="./about.html">ABOUT US</a></div>
       <img class="logo-2" src="./photos/dentnews.png" alt="Dentnews logo">
-      <div class="navigation-element-right">
-        <a href="./subscribe.html">SUBSCRIBE</a>
-      </div>
-      <div class="navigation-element-right">
-        <a href="./contact.html">CONTACT</a>
-      </div>
-     </nav>
-    </header>
+      <div class="navigation-element-right"><a href="./subscribe.html">SUBSCRIBE</a></div>
+      <div class="navigation-element-right"><a href="./contact.html">CONTACT</a></div>
+    </nav>
+  </header>
 
-    <section class="big-news">
-        <a href="./article1.html"> 
-           <img src="./photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
-           <div>
-            <p><span class="breaking-news">BREAKING NEWS</span></p> 
-            <h1>Dental clinics not affected by the new pandemic law.</h1>
-            <p>What you need to know regarding the new law.</p>
-           </div>
-        </a>
-    </section>
-
-    <section class="news-container">
-      <div class="news">
-        <a href="./article2.html"> 
-          <img src="./photos/implants.jpg" alt="Picture of a dental implant">
-          <div>
-            <h3>Dental implants - what's new on the market?</h3>
-            <p>Here are the latest news regarding dental implants.</p>
-          </div>
-        </a>
+  <section class="big-news">
+    <a href="./article1.html">
+      <img src="./photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
+      <div>
+        <p><span class="breaking-news">BREAKING NEWS</span></p>
+        <h1>Dental clinics not affected by the new pandemic law.</h1>
+        <p>What you need to know regarding the new law.</p>
       </div>
+    </a>
+  </section>
 
-      <div class="news">
-        <a href="./article3.html"> 
-          <img src="./photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
-          <div>
-            <h3>Pros and cons of Invisalign braces</h3>
-            <p>Virtually invisible. Unlike traditional braces, the Invisalign system
+  <section class="news-container">
+    <div class="news">
+      <a href="./article2.html">
+        <img src="./photos/implants.jpg" alt="Picture of a dental implant">
+        <div>
+          <h3>Dental implants - what's new on the market?</h3>
+          <p>Here are the latest news regarding dental implants.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="news">
+      <a href="./article3.html">
+        <img src="./photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
+        <div>
+          <h3>Pros and cons of Invisalign braces</h3>
+          <p>Virtually invisible. Unlike traditional braces, the Invisalign system
             doesn't use wires or brackets. </p>
-          </div>
-        </a>
-      </div>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article4.html"> 
-          <img src="./photos/child.jpg" alt="Picture of a young child holding a toothbrush">
-          <div>
-            <h3>New guidelines in pediatric dentistry from January 2021</h3>
-            <p>Read the new guidelines.</p>
-          </div>
-        </a>
-      </div>
+    <div class="news">
+      <a href="./article4.html">
+        <img src="./photos/child.jpg" alt="Picture of a young child holding a toothbrush">
+        <div>
+          <h3>New guidelines in pediatric dentistry from January 2021</h3>
+          <p>Read the new guidelines.</p>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article5.html"> 
-          <img src="./photos/dentalclinic.jpg" alt="Picture of a dental clinic">
-          <div>
-            <h3>COVID-19 - one year later</h3>
-            <p>How has the pandemic affected small private practices around the country?</p>
-          </div>
-        </a>
-      </div>
+    <div class="news">
+      <a href="./article5.html">
+        <img src="./photos/dentalclinic.jpg" alt="Picture of a dental clinic">
+        <div>
+          <h3>COVID-19 - one year later</h3>
+          <p>How has the pandemic affected small private practices around the country?</p>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article6.html"> 
-          <img src="./photos/electricscooter.jpg" alt="Picture of an electric scooter">
-          <div>
-            <h3>Dental traumas</h3>
-            <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
+    <div class="news">
+      <a href="./article6.html">
+        <img src="./photos/electricscooter.jpg" alt="Picture of an electric scooter">
+        <div>
+          <h3>Dental traumas</h3>
+          <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
             of electric scooters.</p>
-          </div>
-        </a>
-      </div>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article7.html"> 
-          <img src="./photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
-          <div>
-            <h3>Humble Co</h3>
-            <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
+    <div class="news">
+      <a href="./article7.html">
+        <img src="./photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
+        <div>
+          <h3>Humble Co</h3>
+          <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
             revolution in dental hygiene products.</p>
-          </div>
-        </a>
-      </div>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article8.html">
-          <img src="./photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
-          <div>
-            <h3>Top 10 best electric toothbrushes in 2021</h3>
-            <p>Read the test here.</p>
-          </div>
-        </a>
-      </div>
+    <div class="news">
+      <a href="./article8.html">
+        <img src="./photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
+        <div>
+          <h3>Top 10 best electric toothbrushes in 2021</h3>
+          <p>Read the test here.</p>
+        </div>
+      </a>
+    </div>
 
-      <div class="news">
-        <a href="./article9.html">
-          <img src="./photos/intraoralscanner.jpg" alt="Picture of an intraoral scanner">
-          <div>
-            <h3>Intraoral scanners</h3>
-            <p>How to get started with intraoral scanning.</p>
-          </div>
-        </a>
-      </div>
+    <div class="news">
+      <a href="./article9.html">
+        <img src="./photos/intraoralscanner.jpg" alt="Picture of an intraoral scanner">
+        <div>
+          <h3>Intraoral scanners</h3>
+          <p>How to get started with intraoral scanning.</p>
+        </div>
+      </a>
+    </div>
 
-    </section>
+  </section>
 
-    <footer>
-      <p>Dentnews AB 2021 &copy</p>
-    </footer>
-  </body>
+  <footer>
+    <p>Dentnews AB 2021 &copy</p>
+  </footer>
+</body>
+
 </html>
