commit -m "changed the separators according to feedback"

--- a/code/index.html
+++ b/code/index.html
@@ -57,7 +57,7 @@
             Suspendisse a fermentum ipsum.
             Nullam erat purus, rutrum ac nulla quis, mollis scelerisque mi.</p>
         </div>
-        <img src="images\4.1.jpg" alt="Angry looking black cat">
+        <img src="images/4.1.jpg" alt="Angry looking black cat">
       </div>
     </div>
 
@@ -72,7 +72,7 @@
     <div class="big-news">
       <div class="news-2">
         <h2><a href="#">Leaked footage of the doomsday planning</a></h2>
-        <img src="images\6.1.jpg" alt="Cat in an online meeting with other cats">
+        <img src="images/6.1.jpg" alt="Cat in an online meeting with other cats">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Maecenas metus tortor, sollicitudin vitae ornare molestie, porta et nunc.
           Tristique senectus et netus et malesuada fames ac.
@@ -81,7 +81,7 @@
 
       <div class="news-2">
         <h2><a href="#">Is this what we've been waiting for?</a></h2>
-        <img src="images\2.1.jpg" alt="Cat tucked in under a blanket">
+        <img src="images/2.1.jpg" alt="Cat tucked in under a blanket">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Maecenas metus tortor, sollicitudin vitae ornare molestie, porta et nunc.
           Vitae suscipit tellus mauris a diam maecenas sed enim ut.</p>
@@ -99,19 +99,19 @@
     <div class="small-news">
       <div class="news-3">
         <h2><a href="#">You really shouldn't...</a></h2>
-        <img src="images\5.1.jpg" alt="Cat looking surprised">
+        <img src="images/5.1.jpg" alt="Cat looking surprised">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
 
       <div class="news-3">
         <h2><a href="#">Are they watching us?</a></h2>
-        <img src="images\3.1.jpg" alt="Three cats on a building looking down at you">
+        <img src="images/3.1.jpg" alt="Three cats on a building looking down at you">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
 
       <div class="news-3">
         <h2><a href="#">Hidden message found</a></h2>
-        <img src="images\7.1.jpg" alt="Black cat barely visible in high grass">
+        <img src="images/7.1.jpg" alt="Black cat barely visible in high grass">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </div>
